<resources>
    <string name="app_name">TkRally</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Match Settings</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="deuce">Deuce</string>
    <string name="points_40">40</string>
    <string name="advance">AD</string>
    <string name="break_point_player1">Break Point Player 1</string>
    <string name="break_point_player2">Break Point Player 2</string>
    <string name="game_for_player1">Game for Player 1</string>
    <string name="tiebreak">Tiebreak</string>
    <string name="game_for_player2">Game for Player 2</string>
    <string name="set_for_player1">Set for Player 1</string>
    <string name="game_set_match_player1">Game, Set, Match Player 1</string>
    <string name="set_for_player2">Set for Player 2</string>
    <string name="game_set_match_player2">Game, Set, Match Player 2</string>
    <string name="fault">Fault</string>
    <string name="double_fault">D.Fault</string>
    <string name="toast_message_serve">Can\'t change the serve in the middle of the match</string>
    <string name="reset">New Match</string>
    <string name="unf_error_button">U.Error</string>
    <string name="forced_error_button">F.Error</string>
    <string name="sets">SETS</string>
    <string name="games">GAMES</string>
    <string name="points">POINTS</string>
    <string name="ace">Ace</string>
    <string name="winner">Winner</string>
    <string name="winner_player">WINNER</string>
    <string name="serve">Serve</string>
    <string name="settings_title">Match Settings</string>
    <string name="statistics_title">Match Statistics</string>
    <string name="settings_number_of_sets_label">Number of Sets in the Match</string>
    <string name="settings_number_of_sets_key" translatable="false">number_of_sets</string>
    <string name="settings_number_of_sets_default" translatable="false">2</string>
    <string name="settings_number_of_games_label">Number of Games in the Set</string>
    <string name="settings_number_of_games_key" translatable="false">number_of_games</string>
    <string name="settings_number_of_games_default" translatable="false">6</string>
    <string name="settings_tiebreak_label">Tiebreak</string>
    <string name="settings_tiebreak_key" translatable="false">tiebreak_value</string>
    <string name="settings_tiebreak_default" translatable="false">@string/settings_tiebreak_true_value</string>
    <string name="settings_tiebreak_true_label">Play Tiebreak</string>
    <string name="settings_tiebreak_true_value">Yes</string>
    <string name="settings_tiebreak_false_label">No Tiebreak</string>
    <string name="settings_tiebreak_false_value">No</string>
    <string name="settings_advantage_label">Advantage</string>
    <string name="settings_advantage_key">advantage_value</string>
    <string name="settings_advantage_default">@string/settings_advantage_true_value</string>
    <string name="settings_advantage_true_label">Play Advantage</string>
    <string name="settings_advantage_true_value">Yes</string>
    <string name="settings_advantage_false_label">No Advantage</string>
    <string name="settings_advantage_false_value">No</string>
    <string name="settings_sets_1_label">Play 1 set Match</string>
    <string name="settings_sets_1_value" translatable="false">1</string>
    <string name="settings_sets_2_label">Play 2 set Match</string>
    <string name="settings_sets_2_value" translatable="false">2</string>
    <string name="settings_sets_3_label">Play 3 set Match</string>
    <string name="settings_sets_3_value" translatable="false">3</string>
    <string name="settings_games_02_label">Play 2 Games Set</string>
    <string name="settings_games_03_label">Play 3 Games Set</string>
    <string name="settings_games_04_label">Play 4 Games Set</string>
    <string name="settings_games_05_label">Play 5 Games Set</string>
    <string name="settings_games_06_label">Play 6 Games Set</string>
    <string name="settings_games_07_label">Play 7 Games Set</string>
    <string name="settings_games_08_label">Play 8 Games Set</string>
    <string name="settings_games_09_label">Play 9 Games Set</string>
    <string name="settings_games_10_label">Play 10 Games Set</string>
    <string name="settings_games_11_label">Play 11 Games Set</string>
    <string name="settings_games_12_label">Play 12 Games Set</string>
    <string name="settings_games_02_value" translatable="false">2</string>
    <string name="settings_games_03_value" translatable="false">3</string>
    <string name="settings_games_04_value" translatable="false">4</string>
    <string name="settings_games_05_value" translatable="false">5</string>
    <string name="settings_games_06_value" translatable="false">6</string>
    <string name="settings_games_07_value" translatable="false">7</string>
    <string name="settings_games_08_value" translatable="false">8</string>
    <string name="settings_games_09_value" translatable="false">9</string>
    <string name="settings_games_10_value" translatable="false">10</string>
    <string name="settings_games_11_value" translatable="false">11</string>
    <string name="settings_games_12_value" translatable="false">12</string>
    <string name="teniski_klub_rally">Tennis Club Rally</string>
    <string name="web_adresa_www_kvalitetnaskolatenisa_com">Web address: www.kvalitetnaskolatenisa.com</string>
    <string name="email_info_revoloop_hr">Email: info@revoloop.hr</string>
    <string name="radno_vrijeme">Working Hours:</string>
    <string name="od_8_do_22_sati">From 8 to 22 hours</string>
    <string name="ime_se_bavimo">What do we do:</string>
    <string name="nasa_misija">Our mission is to provide high quality tennis lessons to large number of people. Mission, team and leadership are foundations of our club.</string>
    <string name="sjediste">Address: Klinčaselska bb, 10040, Zagreb</string>
    <string name="broj_telefona_385_95_903_44_21">Phone Number: +385 95 903 44 21</string>
    <string name="vs">VS</string>
    <string name="scorekeeper_reset_match">Match Reset</string>
    <string name="scorekeeper_reset_question">All unsaved progress will be lost. Do you really want to start a new match?</string>
    <string name="scorekeeper_beauty_of_the_game">Discover the Beauty of the Game</string>
    <string name="score_open_statistics">Open Statistics</string>
    <string name="score_undo_point">Undo point</string>
    <string name="score_redo_point">Redo point</string>
    <string name="score_open_players_information">Open players information</string>
    <string name="score_change_serve_image">Change who serves first</string>
    <string name="Error_no_app">Unable to find right application</string>
    <string name="empty_view_title_text">It\'s a bit lonely here to play.</string>
    <string name="empty_view_subtitle_text">Get started by adding a player</string>
    <string name="Unknown_nationality">Unknown nationality</string>
    <string name="action_insert_dummy_data">Insert Default Player</string>
    <string name="action_delete_all_entries">Delete All Players</string>
    <string name="action_delete_all_matches">Delete All Matches</string>
    <string name="category_overview">Overview</string>
    <string name="hint_player_name">Player Name</string>
    <string name="hint_player_nationality">Nationality</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_player_weight">Weight</string>
    <string name="unit_player_weight">Kg</string>
    <string name="unit_player_height">Cm</string>
    <string name="hint_player_height">Height</string>
    <string name="hint_player_birth">Year of Birth</string>
    <string name="editor_activity_title_new_player">New Player</string>
    <string name="editor_activity_title_edit_player">Edit Player</string>
    <string name="action_delete">Delete Player</string>
    <string name="action_save">Save Player</string>
    <string name="action_save_match">Save Match</string>
    <string name="action_set_default_players">Set Players As Default</string>
    <string name="saving_default_players">Current Players Are Set As Defaults</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="delete_dialog_msg">Do you want to delete this player?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_player_successful">Player deleted</string>
    <string name="editor_delete_all_players_successful">All players deleted</string>
    <string name="editor_delete_player_failed">An error occurred while deleting the player</string>
    <string name="editor_delete_all_players_failed">An error occurred while deleting players</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_all_players_dialog_msg">This will delete all players. Are you sure?</string>
    <string name="delete_all_matches_dialog_msg">This will delete all matches ever played. Are you sure?</string>
    <string name="save_match_dialog_msg">Save you match</string>
    <string name="save_match_dialog_msg_new">As new</string>
    <string name="save_match_dialog_msg_existing">Overwrite</string>
    <string name="save_match_dialog_msg_cancel">Cancel</string>
    <string name="title_players_catalog">Players Manager</string>
    <string name="action_play_1">Set As Player 1</string>
    <string name="action_play_2">Set As Player 2</string>
    <string name="action_play_delete">Delete</string>
    <string name="action_match_load">Load</string>
    <string name="action_match_delete">Delete</string>
    <string name="editor_set_player">Player is set successfully</string>
    <string name="editor_set_player_error">An error occurred while setting the player</string>
    <string name="action_save_new">Save As New</string>
    <string name="empty_view_subtitle_text_match">But, let\'s play some tennis first</string>
    <string name="empty_view_title_text_match">Here are your saved tennis matches</string>
    <string name="title_matches_catalog">Played Matches</string>
    <string name="title_matches_details">Match Details</string>
    <string name="quiz_number_counter">Question number: 1</string>
    <string name="quiz_text_question">This is question text</string>
    <string name="quiz_answer_hint">Type your answer here</string>
    <string name="quiz_try_again_button">Try Again</string>
    <string name="quiz_next_button">Next</string>
    <string name="quiz_submit_button">Submit</string>
    <string name="quiz_current_score">Your score: 0/10</string>
    <string name="manage_players">Manage Players</string>
    <string name="played_matches">Played Matches</string>
    <string name="tennis_quiz">Tennis Quiz</string>
    <string name="web_address">Web Address</string>
    <string name="visit_us_on_facebook">Visit Us On Facebook</string>
    <string name="where_are_we">Where Are We</string>
    <string name="communication">Communication:</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="contact_information">Contact Information</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2605143276968480/5999036685</string>
</resources>