<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <ListPreference
        android:defaultValue="@string/settings_number_of_games_default"
        android:entries="@array/settings_games_labels"
        android:entryValues="@array/settings_games_values"
        android:key="@string/settings_number_of_games_key"
        android:title="@string/settings_number_of_games_label" />
    <ListPreference
        android:defaultValue="@string/settings_number_of_sets_default"
        android:entries="@array/settings_sets_labels"
        android:entryValues="@array/settings_sets_values"
        android:key="@string/settings_number_of_sets_key"
        android:title="@string/settings_number_of_sets_label" />
    <ListPreference
        android:defaultValue="@string/settings_tiebreak_default"
        android:entries="@array/settings_tiebreak_labels"
        android:entryValues="@array/settings_tiebreak_values"
        android:key="@string/settings_tiebreak_key"
        android:title="@string/settings_tiebreak_label" />
    <ListPreference
        android:defaultValue="@string/settings_advantage_default"
        android:entries="@array/settings_advantage_labels"
        android:entryValues="@array/settings_advantage_values"
        android:key="@string/settings_advantage_key"
        android:title="@string/settings_advantage_label" />
    <ListPreference
        android:key="pref_static_field_key"
        android:persistent="false"
        android:selectable="false"
        android:summary="You must reset match for the changes to take effect." />
</PreferenceScreen>