<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_player_manager"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/manage_players" />
        <item
            android:id="@+id/nav_match_manager"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/played_matches" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/tennis_quiz" />
        <item
            android:id="@+id/nav_web_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/web_address" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/visit_us_on_facebook" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/where_are_we" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_phone"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/call_us"
                />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_mail_black_24dp"
                android:title="@string/email_us" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/contact_information" />
            <item
                android:id="@+id/nav_term_of_use"
                android:icon="@drawable/ic_verified_user_black_24dp"
                android:title="@string/term_of_use" />
        </menu>
    </item>


</menu>
