<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/reset"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_save_match"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_set_default_players"
        android:title="@string/action_set_default_players"
        app:showAsAction="never"
        />
</menu>
