<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.akristic.www.tkrally.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="2dp"
            android:text="@string/quiz_number_counter" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="4dp"
            android:text="@string/quiz_text_question"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:padding="4dp"
            android:visibility="invisible"
            tools:visibility="visible">

        </RadioGroup>

        <EditText
            android:id="@+id/question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quiz_answer_hint" />


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isIndicator="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="tryAgain"
            android:text="@string/quiz_try_again_button"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_next_question"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="nextQuestion"
            android:text="@string/quiz_next_button"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_submit_question"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="submitQuestion"
            android:text="@string/quiz_submit_button" />

        <TextView
            android:id="@+id/current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_current_score" />

    </LinearLayout>


</ScrollView>


