<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".PlayerEditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <!-- Label -->
                <TextView
                    style="@style/CategoryStyleOverview"
                    android:text="@string/category_overview" />

                <android.support.v7.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/small_horizontal_margin"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="45dp">

                    <ImageView
                        android:id="@+id/editor_player_image"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/player_silhouette"
                        tools:src="@drawable/player_silhouette" />
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/editor_add_picture_button"
                    style="@style/score_btn_style"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Add picture" />
            </LinearLayout>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_player_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_player_name"
                    android:maxLength="35"
                    android:inputType="textCapWords" />

                <!-- Nationality field -->
                <EditText
                    android:id="@+id/edit_player_nationality"
                    style="@style/EditorFieldStyle"
                    android:maxLength="35"
                    android:hint="@string/hint_player_nationality"
                    android:inputType="textCapWords" />
                <!-- Year of birth field -->
                <EditText
                    android:id="@+id/edit_player_birth"
                    android:maxLength="4"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_player_birth"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>


        <!-- Gender category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_gender" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_measurement" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_player_weight"
                    style="@style/EditorFieldStyle"
                    android:maxLength="3"
                    android:hint="@string/hint_player_weight"
                    android:inputType="number" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_player_weight" />

                <!-- Height field -->
                <EditText
                    android:id="@+id/edit_player_height"
                    style="@style/EditorFieldStyle"
                    android:maxLength="3"
                    android:layout_below="@id/label_weight_units"
                    android:hint="@string/hint_player_height"
                    android:inputType="number" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_height_units"
                    style="@style/EditorUnitsStyle"
                    android:layout_below="@id/label_weight_units"
                    android:text="@string/unit_player_height" />
            </RelativeLayout>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/player_editor_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>

</ScrollView>
